--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,14 @@
     "axios": "^1.13.2",
     "react": "^19.2.1",
     "react-calendar": "^6.0.0",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "react-router-dom": "^7.11.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.2",
