--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.2",
