--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^19.2.1",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.2.1",
+    "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.11.0"
   },
   "scripts": {
