--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "dependencies": {
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "express": "^5.2.1",
     "react": "^19.2.1",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.2.1",
@@ -18,5 +20,11 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.2",
     "vite": "^7.2.7"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
