--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "dependencies": {
     "axios": "^1.13.2",
+    "express": "^5.2.1",
     "react": "^19.2.1",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.2.1",
